Pulse 2 3.6.0
=============
 * [FEATURE] Replacement of historic Pulse PXE by PXELINUX
 * [FEATURE] Ability to define Clonezilla options for imaging
 * [FEATURE] Ability to define NFS mounts for imaging client
 * [BUGFIX]  Fix database schemas and format
 * [BUGFIX]  Improve detection of disks and partitions
 * [BUGFIX]  Fix options for PXE registration
 * [FEATURE] Add Mageia support in the dashboard
 * [BUGFIX]  Fix the loading of json files containing non printable characters in PXE registration
 * [BUGFIX]  Fix listing packages in Launch Bundle view of computer's secure control
 * [BUGFIX]  Fix for deployment on targets where IP address has changed
 * [FEATURE] Restore backup to other hosts
 * [BUGFIX]  Make use of preferred_network for the choice of launcher
 * [FEATURE] Upgrade inventory agent to 2.3.18
 * [BUGFIX]  Enable registration of assembled machines